samples/_failures_safe/1761273525_2d3212_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52e6647d.c: In function ‘main’:
./samples/SAFE/__tmp_52e6647d.c:163:5: error: expected declaration or statement at end of input
  163 |     } else {
      |     ^
./samples/SAFE/__tmp_52e6647d.c:163:5: error: expected declaration or statement at end of input
